Revision history for Perl extension Mail::Audit.

2.200_06 2006-07-16
         use File::Temp a few places where it's indicated
         add a munge_name arg to Mail::Audit::List
         fix directory permissions
         fixed bugs in proc2ma (ticket 2982, thanks MARKSTOS)

2.200_05 2006-06-04
         more testing
         more tweaking
         more frustration

2.200_04 2006-06-04
         log now uses on-object filehandles, rather than globals
         delivery to msgprefix completely removed, as it was never implemented
         exit behavior somewhat encapsulated for testability
         PGP plugin now replaces, rather than adds, content type headers
         more tests

2.200_03 2006-06-01
         our first meaningful tests!
         also some POD tests
         POD cleaned up
         many undocumented modules given a _-prefix
         removed undocumented, bizarre inreplyto_and_references method

2.200_02 2006-05-30
         various code cleanup, including perltidy
         extra options, previously an optional hashref passed as first arg,
           should now be passed as the last arg; factored out and deprecation
           warning added; they were mostly undocumented
         moved to Module::Install

2.200_01 2006-05-24
         maintenance assumed by RJBS
         changes inherited from Meng Wong
         ???

2.1   - 2002-01-15 17:59:46
        Meng Weng Wong <mengwong@pobox.com> made some edits.

        ~username and strftime "interpolation" into accept() arguments.
        $mail->accept("~/Mail/In/%Y%m%d"); -> /home/matest/Mail/In/20020115

        multiple-argument accept() will deliver to multiple maildirs using
        single-inode multiple-hardlink style.

        emergency mailbox support if none of the accept()s work.

        deferral back to mailqueue if emergency couldn't get delivered.

        fixed the From header bug http://rt.cpan.org/NoAuth/Bug.html?id=118

        fixed the user method override bug with (@_) argument passing
